--- a/roles/cluster/vars/main.yml
+++ b/roles/cluster/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 # vars file for cluster
-access: AKIAVQ4DFPLJ3DO46SH7
-secret: 2jGD93uKiQ3obRLbCigGj3rShMUj8hAus5ZldkrE
+access: <yourkey>
+secret: <yoursecretkey>
 image: ami-0bcf5425cdc1d8a85
 sg: sg-007b77ccf46184ac6
 key: mykey
